tests/paczka1/fuzzy1/71310514.err
Error in line 9: bVwTwVq S427 56,7
Error in line 11: OF9p6O S413 77,7
Error in line 23: 7z27ZI S413 219,1
Error in line 36: oMAl S4%7 %1,7
Error in line 34: 90P5 S400 38,1
Error in line 37: 90P5 S413 27,9
Error in line 35: SsV S398 79,5
